# scrap

./: .gitignore  README.md  chemkin_to_graph.py  chemkin_to_md.py
.github/workflows/: nbody-baseline.yml  test.yml
advection2d/: README.md  config.yaml
advection2d/examples/: gallery.rs  rank.rs  rank_gauss.rs  rank_gauss_reverse.rs  rank_reverse.rs
advection2d/src/: render.rs
advection2d/src/schemes/: centered10.rs  centered12.rs  mod.rs  (+6 more)
advection2d/tests/: centered10.yaml  centered14.yaml  centered6.yaml  centered8.yaml  mp5.yaml  rank_example.rs  reverse_rotation.rs  teno6.yaml  teno7a.yaml  teno8a.yaml  tvd_minmod.yaml  tvd_vanleer.yaml  upwind3x3.yaml  weno5_z.yaml  weno7_z.yaml  weno9_z.yaml
advection2d/tests_gaussian/: centered10.yaml  centered12.yaml  centered14.yaml  centered6.yaml  centered8.yaml  mp5.yaml  teno6.yaml  teno7a.yaml  teno8a.yaml  teno9a.yaml  tvd_minmod.yaml  tvd_vanleer.yaml  upwind1.yaml  weno5_z.yaml  weno7_z.yaml  weno9_z.yaml
case01/: main.cpp  makefile  sod_compare.gp
case02/: README.md  main.cpp  plot.gp  plot_live.gp  porous_reactor.hpp
case03/: README.md  main.cpp  makefile  plot_live.gp  porous_reactor.hpp
case04/: README.md  chem.hpp  chem.inp  chemkin_to_graph.py  init.inp  input.inp  input.start  integrators.hpp  main.cpp  makefile  plot.gp
case05/: README.md  main.cpp  makefile
chemkin_ode/: README.md  chem.hpp  chemkin_to_md.py  input.start  integrators.hpp  main.cpp  plot.gp  plot_thermo.py  test_harmonic.cpp
convec/: Cargo.toml  README.md  config.yaml  gaussian.yaml
convec/examples/: all.rs  gallery.rs  rank.rs
convec/src/: config.rs  lib.rs  main.rs  render.rs  shapes.rs  sim.rs  utils.rs
convec/tests/: centered10.yaml  centered12.yaml  centered14.yaml  centered2d.yaml  centered3x3.yaml  centered4x4.yaml  centered6.yaml  centered8.yaml  centered8_ssprk54.yaml  cip.yaml  cip_b.yaml  cip_csl.yaml  cip_csl2.yaml  cip_csl2_mh.yaml  config_consistency.rs  gaussian_reverse_rotation.rs  mp5.yaml  schemes.rs  teno6.yaml  teno7a.yaml  teno8a.yaml  teno9a.yaml  tvd_minmod.yaml  tvd_vanleer.yaml  upwind1.yaml  upwind2d.yaml  upwind3x3.yaml  weno5.yaml  weno5_z.yaml  weno7_z.yaml  weno9_z.yaml
convec/tests_gaussian/: centered10.yaml  centered12.yaml  centered14.yaml  centered6.yaml  centered8.yaml  mp5.yaml  teno6.yaml  teno7a.yaml  teno8a.yaml  teno9a.yaml  tvd_minmod.yaml  tvd_vanleer.yaml  upwind1.yaml  upwind3x3.yaml  weno5.yaml  weno5_z.yaml  weno7_z.yaml  weno9_z.yaml
euler1d_sod/: README.md
nbody/: CMakeLists.txt  README.md  run.sh
nbody/baseline/: baseline.py
nbody/src/: energy.hpp  force_kernel_avx2.cpp  force_kernel_avx2.hpp  integrators.cpp  integrators.hpp  main.cpp  util.hpp
porous_reactor_1d_v1/: README.md  main.cpp  makefile
porous_reactor_1d_v2/: README.md  main.cpp
three_body_pythagorean/: README.md  main.cpp  plot.gp
(+22 files in other folders)
